Fix /private/tmp/Eclipse.app/../Eclipse/features/net.openchrom.jre.macosx.cocoa.aarch64.feature_17.0.11/jre/jdk-17.0.11+9-jre/Contents/Home/lib/libjli.dylibdoes not exist
Ignore AUT configuration if Runner is explicitly given a VM in command
line.
Resolve VM paths relative to configuration file location.