@@ -9,7 +9,7 @@
 # Contributors:
 # 	Xored Software Inc - initial API and implementation and/or initial documentation
 #*******************************************************************************
-export MAVEN_OPTS="-Xms512m -Xmx756m -XX:MaxPermSize=256m"
+export MAVEN_OPTS="-Xms512m -Xmx756m"
 
 OPTIONS="-Dtycho.localArtifacts=ignore $@"
 
